--- a/roles/certbot/tasks/main.yaml
+++ b/roles/certbot/tasks/main.yaml
@@ -2,10 +2,12 @@
   become: yes
   file:
     path: "{{ certbot_path }}"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    recurse: yes
     state: directory
 
 - name: Generate Cloudflare API ini
-  become: yes
   template:
     src: cloudflare.ini.j2
     dest: "{{ certbot_path }}/cloudflare.ini"
@@ -55,18 +57,23 @@
     special_time: daily
     job: "docker run --rm -it -v {{ certbot_path }}:/etc/letsencrypt certbot/dns-cloudflare renew --dns-cloudflare --agree-tos"
 
-- name: Set up nginx config folder
-  become: yes
-  file:
-    path: "{{ nginx_config_path }}/conf.d/{{ item }}"
-    state: directory
-  loop: "{{ domain_names }}"
-  when: nginx_https_redirect
-  
-- name: Set up nginx https redirects
-  become: yes
-  template:
-    src: ssl.conf.j2
-    dest: "{{ nginx_config_path }}/conf.d/{{ item }}/ssl.conf"
-  loop: "{{ domain_names }}"
+- name: Set up nginx
+  block:
+    - name: Set up nginx folder
+      become: yes
+      file:
+        path: "{{ nginx_config_path }}"
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+        state: directory
+    - name: Set up domain config folders
+      file:
+        path: "{{ nginx_config_path }}/conf.d/{{ item }}"
+        state: directory
+      loop: "{{ domain_names }}"
+    - name: Set up https redirect
+      template:
+        src: ssl.conf.j2
+        dest: "{{ nginx_config_path }}/conf.d/{{ item }}/ssl.conf"
+      loop: "{{ domain_names }}"  
   when: nginx_https_redirect
