--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -6,6 +6,7 @@
   become: yes
   vars:
     username: "{{ ansible_username }}"
+    uid: "{{ ansible_uid }}"
     ssh_public_key_file: "{{ ansible_ssh_public_key_file }}"
     ansible_ssh_private_key_file: "{{ bootstrap_ssh_private_key_file | default(root_ssh_private_key_file) }}"
   roles:
