--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -1,7 +1,30 @@
+- name: Set up wordpress data owner group
+  become: yes
+  group:
+    name: "{{ wordpress_data_owner }}"
+    gid: "{{ wordpress_data_uid | int }}"
+    state: present
+
+- name: Set up wordpress data owner
+  become: yes
+  user:
+    name: "{{ wordpress_data_owner }}"
+    group: "{{ wordpress_data_owner }}"
+    comment: "wordpress data owner"
+    home: /
+    shell: /sbin/nologin
+    uid: "{{ wordpress_data_uid | int }}"
+    password_lock: yes
+    system: yes
+    state: present
+
 - name: Set up data folder
   become: yes
   file:
     path: "{{ wordpress_data_path }}"
+    owner: "{{ wordpress_data_owner }}"
+    group: "{{ wordpress_data_owner }}"
+    recurse: yes
     state: directory
 
 - name: Set up docker networks
