--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -20,11 +20,23 @@
   roles:
     - role: certbot
 
+- name: Set up www data path
+  hosts: wordpress
+  become: yes
+  tasks:
+    - file:
+        path: "{{ www_data_path }}"
+        owner: "{{ ansible_username }}"
+        group: "{{ ansible_username }}"
+        state: directory
+
 - name: Set up MySQL
   hosts: wordpress
   vars:
     mysql_container_name: "{{ www_db_container }}"
     mysql_data_path: "{{ www_db_data_path }}"
+    mysql_data_owner: "{{ www_db_owner }}"
+    mysql_data_uid: "{{ www_db_uid }}"
     mysql_networks: "{{ www_networks }}"
     mysql_root_password: "{{ www_db_root_password }}"
     mysql_databse: "{{ www_db_name }}"
@@ -38,6 +50,8 @@
   vars:
     wordpress_container_name: "{{ www_wp_container }}"
     wordpress_data_path: "{{ www_wp_data_path }}" 
+    wordpress_data_owner: "{{ www_wp_owner }}"
+    wordpress_data_uid: "{{ www_wp_uid }}"
     wordpress_networks: "{{ www_networks }}"
     wordpress_db_host: "{{ www_db_container }}"
     wordpress_db_name: "{{ www_db_name }}"
