--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -1,3 +1,12 @@
+- name: Get ansible user info
+  getent:
+    database: passwd
+    key: "{{ ansible_user }}"
+
+- name: Set wordpress data owner uid
+  set_fact:
+    wordpress_data_uid: "{{ getent_passwd[ansible_user][1] | int + 33 }}"
+
 - name: Set up wordpress data owner group
   become: yes
   group:
