--- a/roles/interactive_access/tasks/main.yaml
+++ b/roles/interactive_access/tasks/main.yaml
@@ -31,3 +31,8 @@
 - name: Reset SSH connection to apply changes
   meta: reset_connection
   
+- name: Install screen tool
+  dnf:
+    name: screen
+    state: present
+    
