expose plex direct access port to allow remote access, mount media library as read only

--- a/media_server.yaml
+++ b/media_server.yaml
@@ -37,7 +37,8 @@
   vars:
     nginx_networks: "{{ media_networks }}"
     nginx_purge_networks: no
-    nginx_ports: "{{ plex_ports }}"
+    nginx_ports: 
+      - 443
     nginx_purge_ports: no
     nginx_contents: {}
     nginx_purge_contents: no
