--- a/roles/plex/defaults/main.yaml
+++ b/roles/plex/defaults/main.yaml
@@ -1,7 +1,10 @@
+plex_data_owner: plex_docker
 plex_data_path: /var/local/plex
 plex_media_volumes:
-  - /host_data/music:/data/music:ro
-  - /local/movies:/data/movies:ro
+  - host_path: /host_data/music
+    plex_path: /data/music
+  - host_path: /local/movies
+    plex_path: /data/movies
 
 plex_container_name: plex
 plex_networks:
