--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -54,6 +54,7 @@
       - "/bin/netstat:/bin/netstat:ro"
       - "{{ wordpress_data_path }}:/var/www/html"
     networks: "{{ wordpress_networks }}"
+    network_mode: default
     purge_networks: yes
     networks_cli_compatible: yes
     container_default_behavior: no_defaults
