--- a/roles/qbittorrent/defaults/main.yaml
+++ b/roles/qbittorrent/defaults/main.yaml
@@ -1,10 +1,10 @@
 plex_data_owner: plex_docker
 plex_data_path: /var/local/plex
-plex_data_links:
-  - source: /mnt/music
-    target: music
-  - source: /mnt/movies
-    target: movies
+plex_media_volumes:
+  - host_path: /host_data/music
+    plex_path: /data/music
+  - host_path: /local/movies
+    plex_path: /data/movies
 
 plex_container_name: plex
 plex_networks:
