--- a/roles/qbittorrent/tasks/main.yaml
+++ b/roles/qbittorrent/tasks/main.yaml
@@ -17,15 +17,14 @@
       loop:
         - config
         - downloads
-        - data
-    - name: Set up data folder link destinations
+    - name: Set up downloads folder link destinations
       file:
-        path: "{{ qbittorrent_data_path }}/data/{{ item.target | dirname }}"
+        path: "{{ qbittorrent_data_path }}/downloads/{{ item.target | dirname }}"
         state: directory
       loop: "{{ qbittorrent_data_links }}"
     - name: Set up data folder links
       file:
-        path: "{{ qbittorrent_data_path }}/data/{{ item.target }}"
+        path: "{{ qbittorrent_data_path }}/downloads/{{ item.target }}"
         src: "{{ item.source }}"
         state: link
       loop: "{{ qbittorrent_data_links}}"
@@ -69,9 +68,6 @@
         type: bind
       - source: "{{ qbittorrent_data_path }}/downloads"
         target: /downloads
-        type: bind
-      - source: "{{ qbittorrent_data_path }}/data"
-        target: /data
         type: bind
       - source: /mnt
         target: /mnt
