--- a/roles/ansible_access/tasks/main.yaml
+++ b/roles/ansible_access/tasks/main.yaml
@@ -36,7 +36,7 @@
   copy:
     content: "{{ username }} ALL=(ALL) NOPASSWD: ALL"
     dest: "/etc/sudoers.d/{{ username }}"
-    mode: 0600
+    mode: "600"
 
 - name: Set up facts folder
   file:
