--- a/roles/rclone/defaults/main.yaml
+++ b/roles/rclone/defaults/main.yaml
@@ -6,5 +6,7 @@ rclone_mounts:
     remote: sample
     mount_path: /mnt/sample
     dir: shared
+    polling: yes
+    vfs_cache_size: 50G
   - name: sample2
     config: another_sample.conf
