--- a/all.yaml
+++ b/all.yaml
@@ -4,10 +4,12 @@
 
 - import_playbook: wordpress.yaml
 
+- import_playbook: xray.yaml
+
+- import_playbook: file_server.yaml
+
 - import_playbook: media_server.yaml
 
 - import_playbook: seedbox.yaml
-
-- import_playbook: xray.yaml
 
 - import_playbook: hath.yaml
